--- a/packer/Dockerfile
+++ b/packer/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:16.04
 
 ADD ./scripts scripts
+ADD ./ansible ansible
 
 RUN scripts/bootstrap.sh
+RUN ansible-playbook ansible/local.yml
