Add DigitalOcean Firewall and Loadbalancer

--- a/packer/ansible/files/nginx.conf
+++ b/packer/ansible/files/nginx.conf
@@ -7,7 +7,7 @@ server {
 
 	index index.php index.html;
 
-	server_name website.com;
+	server_name example-nessy.info;
 
 	location / {
 		# First attempt to serve request as file, then
