Fix up nginx.conf for multi app

--- a/salt/apps/files/nginx.conf
+++ b/salt/apps/files/nginx.conf
@@ -1,10 +1,11 @@
 server {
 	listen 80;
-	listen [::]:80;
+
+	server_name {{ server_name }};
 
 	location / {
 			include proxy_params;
-			proxy_pass http://unix:/var/www/simple_app/simple_app.sock;
+			proxy_pass http://unix:/var/www/{{ app }}/{{ app }}.sock;
 	}
 
 }
